# spacer_floating_platform_ros2

./: .gitignore  README.md
docker/: Dockerfile  build_docker.sh  container_startup.sh  dockerfile-jetson  dockerfile-x86  entrypoint.sh  run_docker.sh
floating_platform_control/: README.md  package.xml  setup.cfg  setup.py
floating_platform_control/config/: fp_config.yaml  fp_config_rpi.yaml  vrpn_config.yaml
floating_platform_control/floating_platform_control/: FloatingPlatformDirectValveControl.py  fp_valve_controller.py
floating_platform_control/launch/: fp_valve_control.launch.py  fp_valve_control_rpi.launch.py  optitrack.launch.py  optitrack_motion_capture.launch.py  valve_control.launch.py
rans_ros2/: README.md  RL_player.py  package.xml  setup.cfg  setup.py
rans_ros2/cfg/hl_task/: CloseProximityDock.yaml
rans_ros2/config/: config.yaml
rans_ros2/mujoco_envs/controllers/: RL_games_model_4_mujoco.py  __init__.py  hl_controllers.py
rans_ros2/mujoco_envs/environments/: MFP2D_disturbances_parameters.py  mujoco_base_env.py
rans_ros2/rans_ros2/: RL_player.py
rans_ros2/rans_ros2/cfg/: config.yaml
rans_ros2/rans_ros2/cfg/task/MFP_eval/: MFP2D_CloseProximityDock_perturbed.yaml
rans_ros2/rans_ros2/mujoco_envs/controllers/: RL_games_model_4_mujoco.py  discrete_LQR_controller.py  hl_controllers.py
rans_ros2/rans_ros2/mujoco_envs/environments/: MFP2D_disturbances_parameters.py  disturbances.py  mujoco_base_env.py
rans_ros2/rans_ros2/ros/: ros_node.py  ros_utils.py
rans_ros2/ros/: ros_node.py
