<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floating_platform_control</name>
  <version>0.0.0</version>
  <description>ROS2 package for floating platform</description>
  <maintainer email="kamohara.junnosuke.t6@dc.tohoku.ac.jp">Junnosuke Kamohara</maintainer>
  <license>GPL</license>

  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python-jetson-gpio-pip</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>